src/App.css
/***************  
CSS RESET
***************/
* {
  box-sizing: border-box;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

a {
  text-decoration: none;
  color: var(--white-text-color);
}

a:focus {
  color: var(--primary-color);
  outline: var(--primary-color);
}

li {
  list-style: none;
}

/***************  
COLORS
***************/
:root {
  --main-bg-color: #080c20;
  --primary-color: #3ee9e5;
  --secondary-color: #093f68;
  --body-text-color: #777f98;
  --white-text-color: #ffffff;
  --error-color: #ff2965;
  --image-height: 22rem;
}

/***************  
GENERAL STYLES
***************/
.main-container {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
}

.container {
  width: 95%;
  max-width: 1200px;
  margin-right: auto;
  margin-left: auto;
}

body {
  background-color: var(--main-bg-color);
  color: var(--body-text-color);
  font-size: 18px;
  line-height: 1.76rem;
  font-family: "Manrope", sans-serif;
}

h1 {
  color: var(--white-text-color);
  text-align: center;
  font-size: 2.5rem;
  line-height: 3.5rem;
  font-weight: bold;
}

h2 {
  color: var(--white-text-color);
  text-align: center;
  font-size: 2rem;
  line-height: 3.44;
  font-weight: 700;
}

h3 {
  color: var(--white-text-color);
  text-align: center;
  font-size: 1.5rem;
  line-height: 2.75rem;
  font-weight: 500;
}

@media (min-width: 992px) {
  h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
  }

  h2 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
  }

  h3 {
    font-size: 2rem;
    margin-bottom: 2rem;
  }
}

section {
  margin: 4rem 0 4rem 0;
}

img {
  max-width: 100%;
}

.special-link {
  color: var(--primary-color);
  text-decoration: underline;
}

.special-link:hover {
  color: var(--white-text-color);
}

.btn {
  padding: 0.8rem 1.5rem;
  margin: 0 1rem 0 1rem;
  text-align: center;
  text-decoration: none;
  font-size: 1rem;
  cursor: pointer;
  border-radius: 5px;
  border: 2px solid transparent;
  transition: 0.6s;
}

.btn:hover {
  background-color: transparent;
  border: 2px solid;
}

.btn-primary {
  background-color: var(--primary-color);
  color: var(--main-bg-color);
}

.btn-primary:hover,
.btn-primary:active {
  border: 2px solid var(--primary-color);
  color: var(--white-text-color);
}

.btn-secondary {
  background-color: var(--secondary-color);
  color: var(--primary-color);
}

.btn-secondary:hover,
.btn-secondary:active {
  border: 2px solid var(--secondary-color);
  color: var(--white-text-color);
}

.btn-tertiary {
  background-color: var(--main-bg-color);
  color: var(--primary-color);
}

.btn-tertiary:hover,
.btn-tertiary:active {
  border: 2px solid var(--main-bg-color);
  color: var(--white-text-color);
}

.text-center {
  text-align: center;
}

/***************  
NAVIGATION STYLES
***************/
.navigation {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 1.3rem;
}

.logo {
  font-size: 2.25rem;
  color: var(--primary-color);
}

.navigation-ul {
  display: none;
}

.navigation-mobile {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  background-color: var(--secondary-color);
}

.navigation-mobile > a {
  padding: 1rem;
  width: 100%;
  text-align: center;
}

.navigation-mobile > a:hover {
  background-color: var(--primary-color);
  color: var(--main-bg-color);
}

.nav-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--white-text-color);
  padding: 0.75rem;
  font-size: 1.5rem;
  cursor: pointer;
  width: 1.25rem;
  border-radius: 5px;
}

@media (min-width: 768px) {
  .navigation-ul {
    display: flex;
  }

  .nav-icon {
    display: none;
  }

  .navigation-ul > a {
    margin-left: 1rem;
  }
}

/***************  
BANNER STYLES
***************/
#banner {
  background-image: url("./images/banner-background.png");
  height: 60vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.banner-inner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90%;
  margin: 0 auto;
}

.banner-heading {
  max-width: 35rem;
  margin-bottom: 3rem;
}

.banner-subheading {
  margin-bottom: 2rem;
  max-width: 35rem;
}

.banner-icons {
  margin-bottom: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.banner-icon {
  display: flex;
  color: var(--white-text-color);
  font-size: 3rem;
  margin-left: 1rem;
  margin-right: 1rem;
}

.unique-icon {
  font-size: 2.7rem;
}

.banner-buttons {
  margin-bottom: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

/***************  
ABOUT STYLES
***************/
#about {
  padding: 5rem 0 5rem 0;
}

#about > p {
  max-width: 50rem;
  margin: 2rem auto;
}

/***************  
SKILLS STYLES
***************/
#skills {
  padding: 5rem 0 5rem 0;
}

#skills > div {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 3rem 0 3rem 0;
}

#skills > div > .fab {
  margin: 0 1rem 0 1rem;
  font-size: 3.18rem;
}

#skills > div > img {
  margin: 0 1rem 0 1rem;
}

.fa-html5 {
  color: #e96228;
}

.fa-css3-alt {
  color: #2862e9;
}

.fa-sass {
  color: #c76494;
}

.fa-js {
  color: #efd81d;
}

.fa-react {
  color: #61dafb;
}

.fa-node {
  color: #689f63;
}

.fa-git {
  color: #f05033;
}

.fa-npm {
  color: #cc3534;
}

.fa-gulp {
  color: #e84c50;
}

/***************  
PORTFOLIO STYLES
***************/
#portfolio {
  padding: 5rem 0 5rem 0;
  color: #a9b5d8;
}

.portfolio-wrapper {
  display: grid;
  gap: 4rem 1rem;
  justify-content: center;
}

@media (min-width: 768px) {
  .portfolio-wrapper {
    grid-template-columns: repeat(2, 1fr);
  }
}

.portfolio-card {
  background-color: var(--secondary-color);
  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
  transition: 0.6s;
  border-radius: 5px;
  max-width: 30rem;
}

.portfolio-img > img {
  width: 100%;
  border-radius: 5px 5px 0 0;
  object-fit: cover;
  height: var(--image-height);
}

.portfolio-body {
  height: calc(100% - var(--image-height));
  display: flex;
  flex-direction: column;
  padding: 1.5rem 1rem 8rem;
  position: relative;
}

.portfolio-body > h3 {
  margin-bottom: 1rem;
}

.portfolio-body > p {
  margin-bottom: 2rem;
}

.portfolio-cta {
  bottom: 2rem;
  padding: 0px 3rem;
  position: absolute;
  left: 0px;
  width: 100%;
}

.portfolio-cta > a > .btn {
  width: 100%;
  margin: 0;
  margin-top: 0.5rem;
}

.portfolio-body > .btn-primary:hover {
  color: var(--white-text-color);
}

@media (min-width: 992px) {
  .portfolio-wrapper {
    grid-template-columns: 1fr;
    justify-content: center;
  }

  .portfolio-card {
    display: grid;
    grid-template-columns: 2fr 3fr;
    max-width: 1200px;
    width: 90%;
    margin: 0 auto;
  }

  .portfolio-img {
    margin-top: -2rem;
    margin-left: -2rem;
  }

  .portfolio-img > img {
    border-radius: 5px;
    height: 23rem;
    box-shadow: 0.5rem 0.5rem 1rem var(--main-bg-color);
  }

  .portfolio-body {
    height: calc(100%);
    padding: 1.5rem 1rem 5rem;
  }

  .portfolio-cta {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
  }
}

/***************  
CONTACT STYLES
***************/
#contact {
  padding: 5rem 0 5rem 0;
}

.contact-info > p {
  max-width: 50rem;
  margin: 2rem auto;
}


form {
  margin: 3rem auto;
  max-width: 30rem;
}

.form-group {
  position: relative;
  margin-bottom: 1rem;
}

.form-group > input {
  color: var(--white-text-color);
  width: 100%;
  padding: 0.6rem 0.5rem;
  text-decoration: none;
  font-size: 1rem;
  border-radius: 5px;
  border: 3px solid transparent;
  transition: 0.6s;
}

.form-group > textarea {
  color: var(--white-text-color);
  resize: none;
  width: 100%;
  padding: 0.6rem 0.5rem;
  text-decoration: none;
  font-size: 1rem;
  border-radius: 5px;
  border: 3px solid transparent;
  transition: 0.6s;
  height: 10rem;
}

input[type="text"],
input[type="email"],
textarea {
  outline: none;
  background-color: var(--secondary-color);
}

input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
  border: 3px solid var(--primary-color);
}

form > .btn {
  margin: 0;
}

/***************  
FOOTER STYLES
***************/
#footer {
  position: relative;
  overflow: hidden;
  color: var(--white-text-color);
  margin: 8rem 0 0 0;
  padding: 5rem 0 5rem 0;

  height: 35vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  display: flex;
  justify-content: center;
  align-items: center;
}

#footer > img {
  transform: rotate(220deg);
}

.text-overlay {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/***************  
SPINNER STYLES
***************/
.lds-ring {
  display: flex;
  justify-content: center;
  margin: 0 auto;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #fff;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

